Fix visiblilty mixin

--- a/less/framework/mixins.less
+++ b/less/framework/mixins.less
@@ -610,10 +610,7 @@
 }
 
 .responsive-invisibility() {
-    &,
-  tr&,
-  th&,
-  td& { display: none !important; }
+  display: none !important;
 }
 
 // Grid System
